fixed spacing on main page

--- a/frontend/src/components/Spots/Spots.css
+++ b/frontend/src/components/Spots/Spots.css
@@ -37,3 +37,7 @@ img {
 .address > span {
   font-weight: 500;
 }
+
+.spacer {
+  height: 90px;
+}
